--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:theme="@style/AppTheme" >
         <activity 
             android:name=".SecondActivity"></activity>
+        <activity android:name=".SaoYiSaoActivity"></activity>
+        <activity android:name=".YaoYiYaoActivity"></activity>
+        <activity android:name=".ShoppingActivity"></activity>
+        <activity android:name=".YouXiActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
