--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,10 @@
         <activity android:name=".YaoYiYaoActivity"></activity>
         <activity android:name=".ShoppingActivity"></activity>
         <activity android:name=".YouXiActivity"></activity>
+        <activity android:name=".ZhiFuBaoActivity"></activity>
+        <activity android:name=".NewActivity"></activity>
+        <activity android:name="com.example.listview.ListViewDemoActicity"></activity>
+        
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
