--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,10 +19,11 @@
         <activity android:name=".YaoYiYaoActivity"></activity>
         <activity android:name=".ShoppingActivity"></activity>
         <activity android:name=".YouXiActivity"></activity>
-        <activity android:name=".ZhiFuBaoActivity"></activity>
-        <activity android:name=".NewActivity"></activity>
+        <activity android:name="com.example.testview.TestActivity"></activity>
         <activity android:name="com.example.listview.ListViewDemoActicity"></activity>
-        
+        <activity android:name="com.example.movie.MovieActivity"></activity>
+        <activity android:name="com.example.qiche.QiCheActivity"></activity>
+        com.example.qiche.QiCheActivity
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
