--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity android:name="com.example.listview.ListViewDemoActicity"></activity>
         <activity android:name="com.example.movie.MovieActivity"></activity>
         <activity android:name="com.example.qiche.QiCheActivity"></activity>
-        com.example.qiche.QiCheActivity
+        <activity android:name="com.example.you.YouActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
