--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name="com.example.you.YouActivity"></activity>
         <activity android:name="com.example.guizi.GuiZiActivity"></activity>
         <activity android:name="com.example.benzi.BenZiActivity"></activity>
+        <activity android:name="com.example.phone.PhoneActivity"></activity>
         
         <activity
             android:name=".MainActivity"
