--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,9 @@
         <activity android:name="com.example.phone.PhoneActivity"></activity>
         <activity android:name="com.example.jisuan.JiSuanActivity"></activity>
         <activity android:name="com.example.buju.BuJuActivity"></activity>
-        
+        <activity android:name="com.example.xiangdui.XiangDuiActivity"></activity>
+        <activity android:name="com.example.tongzhi.GuangBoActivity"></activity>
+        <activity android:name="com.example.tongzhi.NotificationActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -38,7 +40,8 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+           
         </activity>
-    </application>
+            </application>
 
 </manifest>
